# background-removal-app

./: .gitignore  README.md  docker-compose.yml  package.json
app/: page.tsx
app/api/upload/: route.ts
backend/: Dockerfile  app.py  pyproject.toml  requirements.txt
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.json
frontend/app/: config.ts  layout.tsx  page.tsx  translations.ts  types.ts  utils.ts
frontend/app/api/upload/: route.ts
frontend/app/components/: BackgroundRemover.tsx  BottomBar.tsx  BuyTokensModal.tsx  CookieConsent.tsx  FaqLink.tsx  GithubLink.tsx  LanguageSelector.tsx  SelectedImageModal.tsx  Topbar.tsx
frontend/app/contexts/: TokenContext.tsx
frontend/app/faq/: page.tsx
frontend/app/faq-en/: page.tsx
frontend/lib/: store.ts
frontend/lib/features/bgremover/: bgremoverSlice.ts
frontend/lib/features/images/: imagesSlice.ts
